z-k8s/5-ingress/ingress-istio-new.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mylist-gateway
  namespace: mylist
spec:
  selector:
    istio: ingressgateway #.istio-system.svc.cluster.local # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mylist
  namespace: mylist
spec:
  hosts:
  - "*"
  gateways:
  - mylist-gateway
  http:
  - match:
    - uri:
        prefix: /mylist/todo
    route:
    - destination:
        host: todo-service.mylist.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /mylist/doing
    route:
    - destination:
        host: doing-service.mylist.svc.cluster.local
        port:
          number: 8080
