z-k8s/5-ingress/ingress-istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mylist-ingress-vs
  namespace: mylist 
spec:
  hosts:
  - "*"
  gateways:
  - ingressgateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /mylist/todo
    route:
    - destination:
        host: todo-service #.mylist.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /mylist/doing
    route:
    - destination:
        host: doing-service #.mylist.svc.cluster.local
        port:
          number: 8080
